# ded

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  buffer.c  buffer.h  build.sh  build_msvc.bat  build_msys2_mingw64.sh  editor.c  editor.h  la.c  la.h  main.c  rc.lua  setup_dependencies.bat  sv.h  test  test.json  todo.org
.ccls-cache/@@home@l@Desktop@test@ded/: @usr@include@GL@gl.h.blob  @usr@include@GL@glew.h.blob  @usr@include@GL@glu.h.blob  @usr@include@SDL2@SDL.h.blob  @usr@include@SDL2@SDL_assert.h.blob  @usr@include@SDL2@SDL_atomic.h.blob  @usr@include@SDL2@SDL_audio.h.blob  @usr@include@SDL2@SDL_blendmode.h.blob  @usr@include@SDL2@SDL_clipboard.h.blob  @usr@include@SDL2@SDL_config.h  @usr@include@SDL2@SDL_config.h.blob  @usr@include@SDL2@SDL_cpuinfo.h.blob  @usr@include@SDL2@SDL_endian.h.blob  @usr@include@SDL2@SDL_error.h.blob  @usr@include@SDL2@SDL_events.h.blob  @usr@include@SDL2@SDL_filesystem.h.blob  @usr@include@SDL2@SDL_gamecontroller.h.blob  @usr@include@SDL2@SDL_gesture.h.blob  @usr@include@SDL2@SDL_guid.h.blob  @usr@include@SDL2@SDL_haptic.h.blob  @usr@include@SDL2@SDL_hidapi.h.blob  @usr@include@SDL2@SDL_hints.h.blob  @usr@include@SDL2@SDL_joystick.h.blob  @usr@include@SDL2@SDL_keyboard.h.blob  @usr@include@SDL2@SDL_keycode.h.blob  @usr@include@SDL2@SDL_loadso.h.blob  @usr@include@SDL2@SDL_locale.h.blob  @usr@include@SDL2@SDL_log.h.blob  @usr@include@SDL2@SDL_main.h.blob  @usr@include@SDL2@SDL_messagebox.h.blob  @usr@include@SDL2@SDL_metal.h.blob  @usr@include@SDL2@SDL_misc.h.blob  @usr@include@SDL2@SDL_mouse.h.blob  @usr@include@SDL2@SDL_mutex.h.blob  @usr@include@SDL2@SDL_opengl.h.blob  @usr@include@SDL2@SDL_pixels.h.blob  @usr@include@SDL2@SDL_platform.h.blob  @usr@include@SDL2@SDL_power.h.blob  @usr@include@SDL2@SDL_quit.h.blob  @usr@include@SDL2@SDL_rect.h.blob  (+242 more)
.ccls-cache/@home@l@Desktop@test@ded/: src@M-x.h  src@M-x.h.blob  src@buffer.h.blob  src@clock.h.blob  src@common.h.blob  src@editor.c  src@editor.c.blob  src@editor.h  src@editor.h.blob  src@emacs.h  src@emacs.h.blob  src@evil.c.blob  src@evil.h  src@evil.h.blob  src@file_browser.h  src@file_browser.h.blob  src@free_glyph.h  src@free_glyph.h.blob  src@hashmap.h.blob  src@helix.c  (+19 more)
shaders/: camera.vert  cursor.frag  cursor.vert  font.frag  font.vert  free_glyph.frag  free_glyph.vert  simple.vert  simple_color.frag  simple_epic.frag  simple_image.frag  simple_text.frag  tile_glyph.frag  tile_glyph.vert
src/: M-x.c  M-x.h  arena.h  buffer.c  buffer.h  clock.c  clock.h  common.c  common.h  cursor_renderer.c  cursor_renderer.h  editor.c  editor.h  elix.h  emacs.c  emacs.h  evil.c  evil.h  file.c  file.h  file_browser.c  file_browser.h  font.c  font.h  free_glyph.c  free_glyph.h  gl_extra.c  gl_extra.h  hashmap.c  hashmap.h  helix.c  helix.h  keychords.c  keychords.h  la.c  la.h  lexer.c  lexer.h  lsp.c  lsp.h  (+24 more)
(+24 files in other folders)
